--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
             crossorigin="anonymous"></script>
     </head>
 <body>
-    
+    <h2 class="h2">บันทึกค่าใช้จ่ายรายวัน</h2>
+    <div>
+        <form id="expense-form">
+            <label for="title">รายการ: </label>
+            <input type="text" id="title" name="title" required />
+
+            <label for="category">ประเภท: </label>
+            <select id="category" name="category" required>
+                <option value="food">อาหาร</option>
+                <option value="shopping">ช้อปปิ้ง</option>
+                <option value="transport">การเดินทาง</option>
+            </select>
+
+            <label for="amount">จำนวนเงิน: </label>
+            <input type="number" id="amount" name="amount" required />
+
+            <label for="date">วันที่: </label>
+            <input type="date" id="date" name="date" required />
+
+            <input type="submit" value="บันทึก">
+        </form>
+    </div><br>
+    <hr><br>
 </body>
 </html>
