--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ระบบบันทึกค่าใช้จ่ายรายวันส่วนตัว</title>
-        <link rel="stylesheet" href="style.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ระบบบันทึกค่าใช้จ่ายรายวันส่วนตัว</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</head>
+
 <body>
     <h2 class="h2">บันทึกค่าใช้จ่ายรายวัน</h2>
     <div>
@@ -54,5 +56,25 @@
         <button onclick="resetFilter()">ล้างตัวกรอง</button>
 
     </div><br><br>
+    <div id="expense-summary">
+        <h3>รายการค่าใช้จ่าย</h3>
+        <table id="table" class="table table-striped">
+            <thead>
+                <tr>
+                    <th>รายการ</th>
+                    <th>จำนวนเงิน</th>
+                    <th>ประเภท</th>
+                    <th>วันที่</th>
+                </tr>
+            </thead>
+            <tbody id="expense-list">
+                <!-- ข้อมูลจะแสดงที่นี่ -->
+            </tbody>
+        </table>
+        ยอดรวม: <span id="total-amount">0</span> บาท
+
+    </div>
+
 </body>
+
 </html>
